--- a/package.json
+++ b/package.json
@@ -2,12 +2,12 @@
   "name": "hyperspace-syntax",
   "theme": "syntax",
   "version": "0.0.0",
-  "description": "A short description of your syntax theme",
+  "description": "The right syntax theme",
   "keywords": [
     "syntax",
     "theme"
   ],
-  "repository": "https://github.com/atom/hyperspace-syntax",
+  "repository": "https://github.com/koteus/hyperspace-syntax",
   "license": "MIT",
   "engines": {
     "atom": ">=1.0.0 <2.0.0"
